--- a/src/main/resources/templates/fotografo.html
+++ b/src/main/resources/templates/fotografo.html
@@ -4,13 +4,13 @@
 </head>
 <body>
 	<div>
-		<h4> Studente </h4>
+		<h4> Fotografo </h4>
 		
-		Nome: <span th:text=${studente.nome}> Pippo </span>
+		Nome: <span th:text=${fotografo.nome}> Pippo </span>
 		
-		Cognome: <span th:text=${studente.cognome}> Pluto </span>
+		Cognome: <span th:text=${fotografo.cognome}> Pluto </span>
 		
-		Matricola: <span th:number=${studente.matricola}> 010101 </span>
+		Matricola: <span th:number=${fotografo.matricola}> 010101 </span>
 		
 	</div>
 </body>
