--- a/src/main/resources/templates/fotografoForm.html
+++ b/src/main/resources/templates/fotografoForm.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 	<div>
-		<h4>Inserisci i dati di uno studente</h4>
+		<h4>Inserisci i dati di un fotografo</h4>
 	</div>
-	<form th:action="@{/studente}" method="POST" th:object="${studente}">
+	<form th:action="@{/fotografo}" method="POST" th:object="${fotografo}">
 		<table>
 			<tr>
 				<td>Nome:</td>
