--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html"> <!--<![endif]-->
 <head>
 
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>SILPH login</title>
+	<title>About us</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -17,7 +17,8 @@
    ================================================== -->
    <link rel="stylesheet" href="css/base.css">
    <link rel="stylesheet" href="css/vendor.css">  
-   <link rel="stylesheet" href="css/main.css">        
+   <link rel="stylesheet" href="css/main.css">
+        
 
    <!-- script
    ================================================== -->
@@ -57,10 +58,10 @@
 			         </ul>
 					</li>
 					<li class="has-children">
-						<a href="single-standard.html" title="">Carrello</a>
+						<a href="carrello.html" title="">Carrello</a>
 					</li>
-					<li><a href="about.html" title="">About</a></li>	
-					<li class="current"><a href="login.html" title="">SILPH</a></li>										
+					<li class="current"><a href="about.html" title="">About</a></li>	
+					<li><a href="login.html" title="">SILPH</a></li>										
 				</ul>
 			</nav> <!-- end main-nav-wrap -->
 
@@ -94,49 +95,57 @@
    	<div class="row">
    		<div class="col-twelve">
 
-   			<section>
+   			<section>  
 
-					<div class="primary-content"></div>
+   				<div class="content-media">						
+						<img src="images/thumbs/about-us.jpg">						  
+					</div>
 
-						<h1 class="entry-title add-bottom">SILPH staff accesso riservato</h1>	
+					<div class="primary-content">
 
-						<div class="row">
-							<div class="col-six tab-full">
-							</div>
+						<h1 class="entry-title add-bottom">SILPH spa fa foto.</h1>	
 
-							<div class="col-six tab-full"></div>
+						<p class="lead">Lorem ipsum Nisi cillum reprehenderit minim sunt dolore dolor eiusmod eu aliquip ad ut sint dolore laborum voluptate ullamco dolore aliquip enim. Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing</p> 
 
-						</div>
+						<p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
 
-						<form name="cForm" id="cForm" method="post" action="pannelloDiControllo.html">
-	  					   <fieldset>
+						<p>Lorem ipsum Cillum sit sunt dolore non aute enim pariatur deserunt magna reprehenderit veniam officia ullamco eiusmod laborum commodo veniam elit proident enim sit cillum ex aliquip dolore labore sint ut deserunt officia veniam consectetur in in quis eu consectetur non sint Duis mollit Ut magna irure.</p>
 
-	                     <div class="form-field">
-	  						      <input name="username" type="text" id="cUsername" class="full-width" placeholder="Username" value="">
-	                     </div>
+					</div>						
 
-	                     <div class="form-field">
-	  						      <input name="password" type="password" id="cPassword" class="full-width" placeholder="Password" value="">
-	                     </div>
-
-	                     <button type="submit" class="submit button-primary full-width-on-mobile">LOGIN</button>
-
-	  					   </fieldset>
-  				      </form> <!-- end form -->
-
-				</section>
-   		
+				</section>  		
 
 			</div> <!-- end col-twelve -->
-   	</div> <!-- end row -->		
-   </section>
+   	</div> <!-- end row -->
+		
+   </section> <!-- end content -->
+
+      <div class="footer-bottom">
+      	<div class="row">
+
+      		<div class="col-twelve">
+	      		<div class="copyright">
+		         	<span>© Copyright SILPH 2019</span> 
+		         	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		         	
+		         </div>
+
+		         <div id="go-top">
+		            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon icon-arrow-up"></i></a>
+		         </div>         
+	      	</div>
+
+      	</div> 
+      </div> <!-- end footer-bottom -->   
+
+   <div id="preloader"> 
+    	<div id="loader"></div>
+   </div> 
 
    <!-- Java Script
    ================================================== --> 
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
-   <script src="http://maps.google.com/maps/api/js?v=3.13&amp;sensor=false"></script>
-   <script src="js/main.js"></script>  
+   <script src="js/main.js"></script>
 
 </body>
 
