--- a/src/main/resources/templates/pannelloDiControllo.html
+++ b/src/main/resources/templates/pannelloDiControllo.html
@@ -5,7 +5,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>SILPH login</title>
+	<title>SILPH admin</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -92,13 +92,14 @@
    ================================================== -->
    <section id="content-wrap" class="site-page">
    	<div class="row">
-   		<div class="col-twelve">
+   		<div class="align-center">
 
    			<section>
 
 					<div class="primary-content"></div>
 
-						<h1 class="entry-title add-bottom">SILPH staff accesso riservato</h1>	
+						<h1 class="entry-title add-bottom">SILPH staff</h1>
+						<h4 class="">Operazioni:</h4>	
 
 						<div class="row">
 							<div class="col-six tab-full">
@@ -107,22 +108,32 @@
 							<div class="col-six tab-full"></div>
 
 						</div>
+  				      
+  	<form name="cForm" id="cForm" method="post" action="fotoForm.html">
+	<button type="submit" class="half-width">Aggiungi foto</button>
+	</form>
+	
+	<form name="cForm" id="cForm" method="post" action="albumForm.html">
+	<button type="submit" class="half-width">Aggiungi album</button>
+	</form>
+	
+	<form name="cForm" id="cForm" method="post" action="addFotografo">
+	<button type="submit" class="half-width">Aggiungi fotografo</button>
+	</form>
+	
+	  	<form name="cForm" id="cForm" method="post" action="mostraFoto.html">
+	<button type="submit" class="half-width">Mostra foto</button>
+	</form>
+	
+	<form name="cForm" id="cForm" method="post" action="mostraAlbum.html">
+	<button type="submit" class="half-width">Mostra album</button>
+	</form>
+	
+	<form name="cForm" id="cForm" method="post" action="mostraFotografi.html">
+	<button type="submit" class="half-width">Mostra fotografi</button>
+	</form>
+	
 
-						<form name="cForm" id="cForm" method="post" action="pannelloDiControllo.html">
-	  					   <fieldset>
-
-	                     <div class="form-field">
-	  						      <input name="username" type="text" id="cUsername" class="full-width" placeholder="Username" value="">
-	                     </div>
-
-	                     <div class="form-field">
-	  						      <input name="password" type="password" id="cPassword" class="full-width" placeholder="Password" value="">
-	                     </div>
-
-	                     <button type="submit" class="submit button-primary full-width-on-mobile">LOGIN</button>
-
-	  					   </fieldset>
-  				      </form> <!-- end form -->
 
 				</section>
    		
@@ -130,6 +141,24 @@
 			</div> <!-- end col-twelve -->
    	</div> <!-- end row -->		
    </section>
+   
+      <div class="footer-bottom">
+      	<div class="row">
+
+      		<div class="col-twelve">
+	      		<div class="copyright">
+		         	<span>© Copyright SILPH 2019</span> 
+		         	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>		         	
+		         </div>
+
+		         <div id="go-top">
+		            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon icon-arrow-up"></i></a>
+		         </div>         
+	      	</div>
+
+      	</div> 
+      </div> <!-- end footer-bottom -->  
+ 
 
    <!-- Java Script
    ================================================== --> 
