--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -43,25 +43,25 @@
    	<div class="row header-content">
 
    		<div class="logo">
-	         <a href="index.html">Author</a>
+	         <a href="/home">Author</a>
 	      </div>
 
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="index.html" title="">Home</a></li>									
+					<li><a href="/home" title="">Home</a></li>									
 					<li class="has-children">
-						<a href="category.html" title="">Categorie</a>
+						<a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
-			            <li><a href="foto.html">Foto</a></li>
-			            <li><a href="album.html">Album</a></li>
-			            <li><a href="fotografi.html">Fotografi</a></li>
+			            <li><a href="/fotos">Foto</a></li>
+			            <li><a href="/albums">Album</a></li>
+			            <li><a href="/fotografi">Fotografi</a></li>
 			         </ul>
 					</li>
 					<li class="has-children">
-						<a href="carrello.html" title="">Carrello</a>
+						<a href="/carrello" title="">Carrello</a>
 					</li>
-					<li class="current"><a href="about.html" title="">About</a></li>	
-					<li><a href="login.html" title="">SILPH</a></li>										
+					<li class="current"><a href="/about" title="">About</a></li>	
+					<li><a href="/login" title="">SILPH</a></li>										
 				</ul>
 			</nav> <!-- end main-nav-wrap -->
 
