--- a/src/main/resources/templates/richiesta.html
+++ b/src/main/resources/templates/richiesta.html
@@ -6,7 +6,7 @@
 <!--- basic page needs
    ================================================== -->
 <meta charset="utf-8">
-<title>SILPH admin</title>
+<title>SILPH login</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -44,22 +44,22 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="index.html">Author</a>
+				<a href="/home">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="index.html" title="">Home</a></li>
-					<li class="has-children"><a href="category.html" title="">Categorie</a>
+					<li><a href="/home" title="">Home</a></li>
+					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
-							<li><a href="foto.html">Foto</a></li>
-							<li><a href="album.html">Album</a></li>
-							<li><a href="fotografi.html">Fotografi</a></li>
+							<li><a href="/fotos">Foto</a></li>
+							<li><a href="/albums">Album</a></li>
+							<li><a href="/fotografi">Fotografi</a></li>
 						</ul></li>
-					<li class="has-children"><a href="single-standard.html"
+					<li class="has-children"><a href="/carrello"
 						title="">Carrello</a></li>
-					<li><a href="about.html" title="">About</a></li>
-					<li class="current"><a href="login.html" title="">SILPH</a></li>
+					<li><a href="/about" title="">About</a></li>
+					<li class="current"><a href="/login" title="">SILPH</a></li>
 				</ul>
 			</nav>
 			<!-- end main-nav-wrap -->
@@ -95,14 +95,14 @@
    ================================================== -->
 	<section id="content-wrap" class="site-page">
 		<div class="row">
-			<div class="align-center">
+			<div class="col-twelve">
 
 				<section>
 
 					<div class="primary-content"></div>
 
-					<h1 class="entry-title add-bottom">SILPH staff</h1>
-					<h4 class="">Operazioni:</h4>
+					<h1 class="entry-title add-bottom">SILPH staff accesso
+						riservato</h1>
 
 					<div class="row">
 						<div class="col-six tab-full"></div>
@@ -111,35 +111,30 @@
 
 					</div>
 
-					<form name="cForm" id="cForm" method="post" action="fotoForm.html">
-						<button type="submit" class="half-width">Aggiungi foto</button>
+					<form name="cForm" id="cForm" th:action="@{/login}" method="post"
+						th:object="${silph}">
+						<fieldset>
+
+							<div class="form-field">
+								<input th:field="*{username}" type="text" id="cUsername"
+									class="half-width" placeholder="Username" value="">
+								<p class="errors" th:if="${#fields.hasErrors('username')}"
+									th:errors="*{username}"></p>
+							</div>
+
+							<div class="form-field">
+								<input th:field="*{password}" type="password" id="cPassword"
+									class="half-width" placeholder="Password" value="">
+								<p class="errors" th:if="${#fields.hasErrors('password')}"
+									th:errors="*{password}"></p>
+							</div>
+
+							<button type="submit"
+								class="submit button-primary full-width-on-mobile">LOGIN</button>
+
+						</fieldset>
 					</form>
-
-					<form name="cForm" id="cForm" method="post" action="albumForm.html">
-						<button type="submit" class="half-width">Aggiungi album</button>
-					</form>
-
-					<form name="cForm" id="cForm" method="post" action="addFotografo">
-						<button type="submit" class="half-width">Aggiungi
-							fotografo</button>
-					</form>
-
-					<form name="cForm" id="cForm" method="post"
-						action="mostraFoto.html">
-						<button type="submit" class="half-width">Mostra foto</button>
-					</form>
-
-					<form name="cForm" id="cForm" method="post"
-						action="mostraAlbum.html">
-						<button type="submit" class="half-width">Mostra album</button>
-					</form>
-
-					<form name="cForm" id="cForm" method="post"
-						action="mostraFotografi.html">
-						<button type="submit" class="half-width">Mostra fotografi</button>
-					</form>
-
-
+					<!-- end form -->
 
 				</section>
 
@@ -149,26 +144,6 @@
 		</div>
 		<!-- end row -->
 	</section>
-
-	<div class="footer-bottom">
-		<div class="row">
-
-			<div class="col-twelve">
-				<div class="copyright">
-					<span>© Copyright SILPH 2019</span> <span>Design by <a
-						href="http://www.styleshout.com/">styleshout</a></span>
-				</div>
-
-				<div id="go-top">
-					<a class="smoothscroll" title="Back to Top" href="#top"><i
-						class="icon icon-arrow-up"></i></a>
-				</div>
-			</div>
-
-		</div>
-	</div>
-	<!-- end footer-bottom -->
-
 
 	<!-- Java Script
    ================================================== -->
