--- a/src/main/resources/templates/carrello.html
+++ b/src/main/resources/templates/carrello.html
@@ -48,7 +48,7 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="index.html">Author</a>
+				<a href="/home">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
