--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -48,7 +48,7 @@
 
 	   	<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/home" title="">Home</a></li>									
+					<li><a href="/" title="">Home</a></li>									
 					<li class="has-children">
 						<a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
@@ -61,7 +61,7 @@
 						<a href="/carrello" title="">Carrello</a>
 					</li>
 					<li class="current"><a href="/about" title="">About</a></li>	
-					<li><a href="/login" title="">SILPH</a></li>										
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>										
 				</ul>
 		</nav> <!-- end main-nav-wrap -->
 
