--- a/src/main/resources/templates/carrello.html
+++ b/src/main/resources/templates/carrello.html
@@ -53,7 +53,7 @@
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/home" title="">Home</a></li>
+					<li><a href="/" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie"
 						title="">Categorie</a>
 						<ul class="sub-menu">
@@ -63,7 +63,7 @@
 						</ul></li>
 					<li class="current"><a href="/carrello" title="">Carrello</a></li>	
 					<li><a href="/about" title="">About</a></li>
-					<li><a href="/login" title="">Login</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
 			</nav>
 			<!-- end main-nav-wrap -->
