--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li class="current"><a href="/home" title="">Home</a></li>
+					<li class="current"><a href="/" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/fotos">Foto</a></li>
@@ -62,7 +62,7 @@
 						</ul></li>
 					<li class="has-children"><a href="/carrello" title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
-					<li><a href="/loginForm" title="">SILPH</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
 			</nav>
 			<!-- end main-nav-wrap -->
@@ -479,7 +479,7 @@
 				</article>
 				<!-- end article -->
 
-				<
+				
 				<article class="brick entry format-standard animate-this">
 
 					<div class="entry-thumb">
