--- a/src/main/resources/templates/fotoForm.html
+++ b/src/main/resources/templates/fotoForm.html
@@ -18,8 +18,8 @@
 				<td th:if="${#fields.hasErrors('idFotografo')}" th:errors="*{idFotografo}"></td>
 				
 				<td>ID album:</td>
-				<td><input type="number" th:field="*{idFoto}" /></td>	
-				<td th:if="${#fields.hasErrors('idFoto')}" th:errors="*{idFoto}"></td>
+				<td><input type="number" th:field="*{idAlbum}" /></td>	
+				<td th:if="${#fields.hasErrors('idAlbum')}" th:errors="*{idAlbum}"></td>
 				
 				<td>URL:</td>
 				<td><input type="text" th:field="*{indirizzo}" /></td>	
