--- a/src/main/resources/templates/confermaInserimentoFotografo.html
+++ b/src/main/resources/templates/confermaInserimentoFotografo.html
@@ -5,7 +5,7 @@
 <!--- basic page needs
    ================================================== -->
 <meta charset="utf-8">
-<title>SILPH login</title>
+<title>Conferma</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -99,7 +99,7 @@
 
 					<div class="primary-content"></div>
 
-					<h1 class="entry-title add-bottom">conferma Fotografo</h1>
+					<h1 class="entry-title add-bottom">Conferma Fotografo</h1>
 					<h4 class="">Fotografo inserito correttamente</h4>
 
 					<div class="row">
