--- a/src/main/resources/templates/fotografi.html
+++ b/src/main/resources/templates/fotografi.html
@@ -7,7 +7,8 @@
 		<h4> Fotografi </h4>
 		<ul>
 		<li th:each="fotografo : ${fotografi}">
-			<a th:href="@{'/fotografo' + '/' + ${fotografo.id}}" th:text="${fotografo.cognome}"> Pluto </a>
+			<a th:href="@{'/fotografo' + '/' + ${fotografo.id}}" 
+					th:text="${fotografo.nome} + ' ' +${fotografo.cognome}"></a>
 		</li>
 		</ul>
 	</div>
