--- a/src/main/resources/templates/fotografo.html
+++ b/src/main/resources/templates/fotografo.html
@@ -6,9 +6,9 @@
 	<div>
 		<h4> Fotografo </h4>
 		
-		Nome: <span th:text=${fotografo.nome}> Pippo </span>
+		Nome: <span th:text=${fotografo.nome}> </span>
 		
-		Cognome: <span th:text=${fotografo.cognome}> Pluto </span>
+		Cognome: <span th:text=${fotografo.cognome}> </span>
 		
 	</div>
 </body>
