--- a/src/main/resources/templates/pannelloDiControllo.html
+++ b/src/main/resources/templates/pannelloDiControllo.html
@@ -131,8 +131,8 @@
 						<button type="submit" class="half-width">Mostra album</button>
 					</form>
 
-					<form name="cForm" id="cForm" method="get" action="/mostrafotografi">
-						<button type="submit" class="half-width">Mostra fotografi</button>
+					<form name="cForm" id="cForm" method="get" action="/cercaFotografo">
+						<button type="submit" class="half-width">Ricerca fotografo</button>
 					</form>
 
 					<form name="cForm" id="cForm" method="get" action="/logout">
