--- a/src/main/resources/templates/pannelloDiControllo.html
+++ b/src/main/resources/templates/pannelloDiControllo.html
@@ -123,12 +123,12 @@
 						<button type="submit" class="half-width">Aggiungi fotografo</button>
 					</form>
 
-					<form name="cForm" id="cForm" method="get" action="/mostraFoto">
-						<button type="submit" class="half-width">Mostra foto</button>
+					<form name="cForm" id="cForm" method="get" action="/cercaFoto">
+						<button type="submit" class="half-width">Ricerca foto</button>
 					</form>
 
-					<form name="cForm" id="cForm" method="get" action="/mostraAlbum">
-						<button type="submit" class="half-width">Mostra album</button>
+					<form name="cForm" id="cForm" method="get" action="/cercaAlbum">
+						<button type="submit" class="half-width">Ricerca album</button>
 					</form>
 
 					<form name="cForm" id="cForm" method="get" action="/cercaFotografo">
