Ricerche - Visualizzazioni complete ;)
fotografi.html --> mostraFotografi.html
fotografo.html --> mostraFotografo.html

ora il fotografo ha anche l'imgProfilo

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -52,9 +52,9 @@
 					<li class="has-children">
 						<a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
-			            <li><a href="/fotos">Foto</a></li>
-			            <li><a href="/albums">Album</a></li>
-			            <li><a href="/fotografi">Fotografi</a></li>
+			            <li><a href="/mostraFotos">Foto</a></li>
+			            <li><a href="/mostraAlbums">Album</a></li>
+			            <li><a href="/mostraFotografi">Fotografi</a></li>
 			         </ul>
 					</li>
 					<li class="has-children">
