--- a/src/main/resources/templates/confermaInserimentoFotografo.html
+++ b/src/main/resources/templates/confermaInserimentoFotografo.html
@@ -51,9 +51,9 @@
 					<li><a href="/" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
-							<li><a href="/fotos">Foto</a></li>
-							<li><a href="/albums">Album</a></li>
-							<li><a href="/fotografi">Fotografi</a></li>
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li class="has-children"><a href="/carrello"
 						title="">Carrello</a></li>
@@ -99,9 +99,8 @@
 
 					<div class="primary-content"></div>
 
-					<h1 class="entry-title add-bottom">Conferma Fotografo</h1>
-					<h4 class="">Fotografo inserito correttamente</h4>
-
+					<h1 class="entry-title add-bottom">Fotografo inserito correttamente</h1>
+					
 					<div class="row">
 						<div class="col-six tab-full"></div>
 
