--- a/src/main/resources/templates/mostraFotografo.html
+++ b/src/main/resources/templates/mostraFotografo.html
@@ -10,14 +10,20 @@
 		
 		Cognome: <span th:text=${fotografo.cognome}> </span>
 		
+		<br/><img th:src="@{${fotografo.imgProfilo}}" width="70px" height="70px">
+		
 		<br/>
 		<br/>
-		<form name="cForm" id="cForm" method="get" action="/cercaFotografo">
+		<form name="cForm" id="cForm" method="get" action="/cercaFotografo" th:if="${utente == 'ADMIN'}">
 				<button type="submit" class="half-width">Nuova ricerca</button>
 		</form>
 
-		<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo">
+		<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
 			<button type="submit" class="half-width">Torna all'area staff</button>
+		</form>
+		
+		<form name="cForm" id="cForm" method="get" action="/" th:if="${utente != 'ADMIN'}">
+			<button type="submit" class="half-width">Torna alla home</button>
 		</form>
 		
 	</div>
