--- a/src/main/resources/templates/pannelloDiControllo.html
+++ b/src/main/resources/templates/pannelloDiControllo.html
@@ -52,9 +52,9 @@
 					<li><a href="/" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
-							<li><a href="/fotos">Foto</a></li>
-							<li><a href="/albums">Album</a></li>
-							<li><a href="/fotografi">Fotografi</a></li>
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/MostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li class="has-children"><a href="/carrello"
 						title="">Carrello</a></li>
@@ -102,6 +102,9 @@
 					<div class="primary-content"></div>
 
 					<h1 class="entry-title add-bottom">SILPH staff</h1>
+					<br/>
+					<h4><span th:text="Bentornato + ' ' +${utente.username}"></span></h4>
+					<br/>
 					<h4 class="">Operazioni:</h4>
 
 					<div class="row">
@@ -111,11 +114,11 @@
 
 					</div>
 
-					<form name="cForm" id="cForm" method="get" action="/fotoForm">
+					<form name="cForm" id="cForm" method="get" action="/addFoto">
 						<button type="submit" class="half-width">Aggiungi foto</button>
 					</form>
 
-					<form name="cForm" id="cForm" method="get" action="/albumForm">
+					<form name="cForm" id="cForm" method="get" action="/addAlbum">
 						<button type="submit" class="half-width">Aggiungi album</button>
 					</form>
 
