--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns="htttp://www.w3.org/1999/html">
 <head>
 
 <!--- basic page needs
@@ -113,7 +114,7 @@
 						<button type="submit" class="half-width">Conferma</button>
 					</form>
 
-					<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo">
+					<form name="cForm" id="cForm" method="get" th:action="@{/pannelloDiControllo}">
 						<button type="submit" class="half-width">indietro</button>
 					</form>
 
