Fix pagine html

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -103,7 +103,7 @@
 
 					<div class="primary-content">
 
-						<h1 class="entry-title add-bottom">SILPH spa fa foto.</h1>	
+						<h1 class="entry-title add-bottom">SILPH spa. Chi siamo.</h1>	
 
 						<p class="lead">Lorem ipsum Nisi cillum reprehenderit minim sunt dolore dolor eiusmod eu aliquip ad ut sint dolore laborum voluptate ullamco dolore aliquip enim. Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing</p> 
 
