--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -112,9 +112,6 @@
 
 					<form name="f" th:action="@{/login}" method="post">
 						<fieldset>
-							<div th:if="${param.error}" class="alert alert-error">    
-                   				 Invalid username and password.
-               				</div>
                 			<div th:if="${param.logout}" class="alert alert-success"> 
                     			You have been logged out.
                 			</div>
@@ -123,6 +120,9 @@
 			                <label for="password">Password</label>
 			                <input type="password" id="password" name="password" class="half-width"/>
 							
+							<p th:if="${param.error}" class="alert alert-error">    
+                   				<b> [!] Invalid username or password.</b>
+               				</p>
 
 							<button type="submit"
 								class="submit button-primary full-width-on-mobile">LOGIN</button>
