--- a/src/main/resources/templates/confermaInserimentoFoto.html
+++ b/src/main/resources/templates/confermaInserimentoFoto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
 <head>
 
 <!--- basic page needs
@@ -48,7 +48,7 @@
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/" title="">Home</a></li>
+					<li><a href="/home" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
@@ -108,12 +108,12 @@
 
 					</div>
 
-					<form name="cForm" id="cForm" method="get" action="/fotoForm">
+					<form name="cForm" id="cForm" method="get" action="/addFoto">
 						<button type="submit" class="half-width">Inserisci nuova Foto</button>
 					</form>
 
 					<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo">
-						<button type="submit" class="half-width">indietro</button>
+						<button type="submit" class="half-width">Indietro</button>
 					</form>
 
 				</section>
