--- a/src/main/resources/templates/confermaInserimentoFotografo.html
+++ b/src/main/resources/templates/confermaInserimentoFotografo.html
@@ -48,7 +48,7 @@
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/" title="">Home</a></li>
+					<li><a href="/home" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
@@ -113,7 +113,7 @@
 					</form>
 
 					<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo">
-						<button type="submit" class="half-width">indietro</button>
+						<button type="submit" class="half-width">Indietro</button>
 					</form>
 
 				</section>
