pagine html mostraFotografi,mostraAlbum, mostraFoto

--- a/src/main/resources/templates/confermaInserimentoAlbum.html
+++ b/src/main/resources/templates/confermaInserimentoAlbum.html
@@ -48,7 +48,7 @@
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/home" title="">Home</a></li>
+					<li><a href="/" title="">Home</a></li>
 					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
