--- a/src/main/resources/templates/css/main.css
+++ b/src/main/resources/templates/css/main.css
@@ -2378,6 +2378,13 @@ header .logo a {
 	width: 25%;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .bricks-wrapper .brick {
 	float: left;
 	padding: 0 20px;
