--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -1,16 +1,197 @@
-<!DOCTYPE html >
-<html xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!DOCTYPE html>
+<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html class="no-js" lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!--<![endif]-->
 <head>
+
+<!--- basic page needs
+   ================================================== -->
+<meta charset="utf-8">
+<title>Foto</title>
+<meta name="description" content="">
+<meta name="author" content="">
+
+<!-- mobile specific metas
+   ================================================== -->
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<!-- CSS
+   ================================================== -->
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/vendor.css">
+<link rel="stylesheet" href="css/main.css">
+
+
+<!-- script
+   ================================================== -->
+<script src="js/modernizr.js"></script>
+<script src="js/pace.min.js"></script>
+
+<!-- favicons
+	================================================== -->
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
-<body>
-	<div>
-		<h4> Fotos </h4>
-		<ul>
-		<li th:each="foto : ${fotos}">
-			<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" th:text="${foto.titolo}" th:if="${utente != 'ADMIN'}"></a>
-			<a th:href="@{'/mostraFotoAdmin' + '/' + ${foto.id}}" th:text="${foto.titolo}" th:if="${utente == 'ADMIN'}"></a>
-		</li>
-		</ul>
+
+<body id="top">
+
+	<!-- header 
+   ================================================== -->
+	<header class="short-header">
+
+		<div class="gradient-block"></div>
+
+		<div class="row header-content">
+
+			<div class="logo">
+				<a href="/home">Author</a>
+			</div>
+
+			<nav id="main-nav-wrap">
+				<ul class="main-navigation sf-menu">
+					<li><a href="/home" title="">Home</a></li>
+					<li class="has-children"><a href="/categorie"
+						title="">Categorie</a>
+						<ul class="sub-menu">
+							<li class="current"><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
+						</ul></li>
+					<li><a href="/carrello" title="">Carrello</a></li>	
+					<li><a href="/about" title="">About</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
+				</ul>
+			</nav>
+			
+			
+			<!-- end main-nav-wrap -->
+
+			<div class="search-wrap">
+
+				<form role="search" method="get" class="search-form" action="#">
+					<label> <span class="hide-content">Search for:</span> <input
+						type="search" class="search-field"
+						placeholder="Type Your Keywords" value="" name="s"
+						title="Search for:" autocomplete="off">
+					</label> <input type="submit" class="search-submit" value="Search">
+				</form>
+
+				<a href="#" id="close-search" class="close-btn">Close</a>
+
+			</div>
+			<!-- end search wrap -->
+
+			<div class="triggers">
+				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
+				<a class="menu-toggle" href="#"><span>Menu</span></a>
+			</div>
+			<!-- end triggers -->
+
+		</div>
+
+	</header>
+	<!-- end header -->
+
+
+	<!-- page header
+   ================================================== -->
+	<section id="page-header">
+		<div class="row current-cat">
+			<div class="col-full">
+				<h1>Foto</h1>
+				<h4> Tutte le foto caricate</h4>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- masonry
+   ================================================== -->
+	<section id="bricks" class="with-top-sep">
+
+		<div class="row masonry">
+
+			<!-- brick-wrapper -->
+			
+			<div class="bricks-wrapper">
+
+		<div th:each="foto : ${fotos}">
+				<div class="grid-sizer"></div>
+
+				<article class="brick entry format-standard animate-this">
+					<div class="entry-thumb">
+						<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" class="thumb-link" >
+						<img th:src="@{${foto.indirizzo}}" width="1024px" height="1024px" class="center">
+						</a>
+					</div>
+
+					<div class="entry-text">
+						<div class="entry-header">
+
+							<div class="entry-meta">
+								<span class="cat-links"> 			
+								<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" th:text="${foto.titolo}" th:if="${utente != 'ADMIN'}"></a>
+								<a th:href="@{'/mostraFotoAdmin' + '/' + ${foto.id}}" th:text="${foto.titolo}" th:if="${utente == 'ADMIN'}"></a>
+								</span>
+							</div>
+						</div>
+					</div>
+				</article>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	
+<!-- PULSANTE TORNA INDIETRO -->
+
+					<form name="cForm" id="cForm" th:action="@{/categorie}" method="post"
+						th:object="${categorie}">
+						<fieldset>
+
+							<button type="submit" class="submit button-primary full-width-on-mobile">Indietro</button>
+
+						</fieldset>
+					</form>
+
+
+<!-- START BOTTOM FOOTER -->
+<footer>
+		<div class="footer-bottom">
+			<div class="row">
+
+				<div class="col-twelve">
+					<div class="copyright">
+						<span>© Copyright SILPH 2019</span> <span>Design by <a
+							href="http://www.styleshout.com/">styleshout</a></span>
+					</div>
+
+					<div id="go-top">
+						<a class="smoothscroll" title="Back to Top" href="#top"><i
+							class="icon icon-arrow-up"></i></a>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<!-- end footer-bottom -->
+
+	</footer>
+
+	<div id="preloader">
+		<div id="loader"></div>
 	</div>
+
+	<!-- Java Script
+   ================================================== -->
+	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/main.js"></script>
+
 </body>
+
 </html>
